--- a/vignettes/original/_data_simulation.Rmd
+++ b/vignettes/original/_data_simulation.Rmd
@@ -138,24 +138,24 @@ create_data_simulation(
 
 We can expand by including a baseline object with covariates and so we need coefficients for including them in the
 hazard calculation. Further we can include coefficient for the treatment parameter (`treatment_effect`) and for the
-difference between internal and external arms (`drift`).
+difference between internal and external arms (`drift_hr`).
 ```{r}
 data_sim <- create_data_simulation(
   baseline = with_age_score,
   coefficients = c(age = 0.001, score_high = 1.5),
   event_dist = exponential_dist,
   treatment_effect = 0.5,
-  drift = -0.1
+  drift_hr = 0.9
 )
 
 data_list <- generate(data_sim)
 head(data_list@data_list[[1]][[1]])
 ```
 
-We can control how datasets are generated with the `n`, `treatment_effect` and `drift` parameters of `generate()`. These
+We can control how datasets are generated with the `n`, `treatment_effect` and `drift_hr` parameters of `generate()`. These
 will override the defaults specified in `create_data_simulation()`.
 ```{r}
-generate(data_sim, n = 10, treatment_effect = c(0, 1, 2), drift = c(0, .2))
+generate(data_sim, n = 10, treatment_effect = c(1, 1.3, 2), drift_hr = c(1, 1.2))
 ```
 
 To add other features to the simulation there are `set_enrollment()`, `set_cut_off()` and `set_dropout()` functions
@@ -249,7 +249,7 @@ my_data_sim_setup <- create_data_simulation(
     external = cut_off_after_events(n = 100)
   )
 
-my_data <- generate(my_data_sim_setup, n = 3, treatment_effect = 1, drift = c(0, 1))
+my_data <- generate(my_data_sim_setup, n = 3, treatment_hr = 1, drift_hr = c(0, 1))
 ```
 
 Now we can define the simulation setup for the models:
@@ -329,5 +329,5 @@ my_data_sim_setup <- create_data_simulation(
     external = cut_off_after_events(n = 100)
   )
 my_data_sim_setup
-my_data <- generate(my_data_sim_setup, n = 3, treatment_effect = 1, drift = c(0, 1))
+my_data <- generate(my_data_sim_setup, n = 3, treatment_hr = 1.3, drift_hr = c(1, 1.2))
 ```
