--- a/vignettes/original/_data_simulation.Rmd
+++ b/vignettes/original/_data_simulation.Rmd
@@ -137,14 +137,14 @@ create_data_simulation(
 ```
 
 We can expand by including a baseline object with covariates and so we need coefficients for including them in the
-hazard calculation. Further we can include coefficient for the treatment parameter (`treatment_effect`) and for the
+hazard calculation. Further we can include coefficient for the treatment parameter (`treatment_hr`) and for the
 difference between internal and external arms (`drift_hr`).
 ```{r}
 data_sim <- create_data_simulation(
   baseline = with_age_score,
   coefficients = c(age = 0.001, score_high = 1.5),
   event_dist = exponential_dist,
-  treatment_effect = 0.5,
+  treatment_hr = 0.5,
   drift_hr = 0.9
 )
 
@@ -152,10 +152,10 @@ data_list <- generate(data_sim)
 head(data_list@data_list[[1]][[1]])
 ```
 
-We can control how datasets are generated with the `n`, `treatment_effect` and `drift_hr` parameters of `generate()`. These
+We can control how datasets are generated with the `n`, `treatment_hr` and `drift_hr` parameters of `generate()`. These
 will override the defaults specified in `create_data_simulation()`.
 ```{r}
-generate(data_sim, n = 10, treatment_effect = c(1, 1.3, 2), drift_hr = c(1, 1.2))
+generate(data_sim, n = 10, treatment_hr = c(1, 1.3, 2), drift_hr = c(1, 1.2))
 ```
 
 To add other features to the simulation there are `set_enrollment()`, `set_cut_off()` and `set_dropout()` functions
@@ -249,7 +249,7 @@ my_data_sim_setup <- create_data_simulation(
     external = cut_off_after_events(n = 100)
   )
 
-my_data <- generate(my_data_sim_setup, n = 3, treatment_hr = 1, drift_hr = c(0, 1))
+my_data <- generate(my_data_sim_setup, n = 3, treatment_hr = 1, drift_hr = c(1, 1.2))
 ```
 
 Now we can define the simulation setup for the models:
@@ -279,18 +279,40 @@ sim_obj <- create_simulation_obj(
   treatment = treatment,
   covariate = covariate
 )
-# sim_results <- mcmc_sample(sim_obj, chains = 1)
-# get_results(sim_results)
+```
+
+And finally sample from these models. See the vignette "4. Conduct a simulation study" for more details.
+
+```{r, eval = FALSE}
+sim_results <- mcmc_sample(sim_obj, chains = 1)
+get_results(sim_results)
 ```
 
 
 ### Using fixed external data
 
+We can also include a known data set as the external data, if we wish to simulate the operating characteristics of
+using previously collected data. This is done by setting the `external_data` argument in `create_data_simulation` to a
+data frame. This data is included after enrollment, cut-off and dropout functions are applied, so these have no effect
+on the fixed data.
+
+It is possible to include a fixed external dataset and additionally simulate external patients by setting `n_ctrl_ext`
+to a non-zero value. This will simulate external patients in addition to the fixed data.
+
 ```{r}
+historical_trial_data <- data.frame(
+  age = rnorm(40, 60, 5),
+  score_high = rbinom(40, 1, 0.7),
+  trt = 0,
+  eventtime = rexp(40, 1 / 50),
+  status = 1,
+  enrollment = 1 # enrollment is specified here but not used in clinical cut off
+)
+
 my_baseline <- create_baseline_object(
   n_trt_int = 100,
   n_ctrl_int = 50,
-  n_ctrl_ext = 100,
+  n_ctrl_ext = 0,
   covariates = baseline_covariates(
     names = c("age", "score"),
     means_int = c(55, 5),
@@ -299,14 +321,6 @@ my_baseline <- create_baseline_object(
     covariance_ext = covariance_matrix(diag = c(5, 1.2), upper_tri = c(0.1))
   ),
   transformations = list(score_high = binary_cutoff("score", int_cutoff = 0.7, ext_cutoff = 0.7))
-)
-
-historical_trial_data <- data.frame(
-  age = rnorm(40, 60, 5),
-  score_high = rbinom(40, 1, 0.7),
-  trt = 0,
-  eventtime = rexp(40, 1 / 50),
-  status = 1
 )
 
 my_data_sim_setup <- create_data_simulation(
@@ -329,5 +343,9 @@ my_data_sim_setup <- create_data_simulation(
     external = cut_off_after_events(n = 100)
   )
 my_data_sim_setup
-my_data <- generate(my_data_sim_setup, n = 3, treatment_hr = 1.3, drift_hr = c(1, 1.2))
+
+# Drift is not be used for the fixed external data!
+generate(my_data_sim_setup, n = 1, treatment_hr = c(1, 1.3), drift_hr = c(1, 1.2))
+
+my_data <- generate(my_data_sim_setup, n = 3, treatment_hr = c(1, 1.3), drift_hr = c(1))
 ```
